# bevy-gl

./: Cargo.toml
resources/models/pony_cartoon/: scene.gltf
resources/models/skull/: scene.gltf
src/: app.rs  camera.rs  lib.rs  util.rs
src/basics/hello_cube/: main.rs  shader.frag
src/basics/hello_plane/: main.rs  shader.frag
src/basics/hello_triangle/: main.rs  shader.frag  shader.vert
src/camera/: camera.rs  camera_info.rs  camera_plugin.rs  camera_position.rs  camera_view.rs  mod.rs
src/ecs/: normal_systems.rs  stage_systems.rs
src/feat/camera/: main.rs  shader.vert
src/feat/model/: head.rs  pony_cartoon.rs  skull.rs
src/feat/scene/: mod.rs  persist.rs  spawn.rs
src/feat/texture/: main.rs
src/libs/: app.rs  mod.rs  util.rs
src/libs/camera/: camera.rs  camera_config.rs  camera_info.rs  camera_plugin.rs  camera_position.rs  camera_view.rs  mod.rs
