[package]
name = "bevy-gl"
version = "0.1.0"
authors = ["Thorsten Lorenz <thlorenz@gmx.de>"]
edition = "2018"

[dependencies]
bevy = { path = "../../../libs/bevy/bevy", version = "0.1.3" }


[[bin]]
name="basics_hello_cube"
path= "src/basics/hello_cube/main.rs"

[[bin]]
name="basics_hello_triangle"
path= "src/basics/hello_triangle/main.rs"

[[bin]]
name="basics_hello_plane"
path= "src/basics/hello_plane/main.rs"

[[bin]]
name="feat_camera"
path= "src/feat/camera/main.rs"

[[bin]]
name="feat_texture"
path= "src/feat/texture/main.rs"

[[bin]]
name="feat_model_head"
path= "src/feat/model/head.rs"

[[bin]]
name="feat_model_skull"
path= "src/feat/model/skull.rs"

[[bin]]
name="feat_model_pony_cartoon"
path= "src/feat/model/pony_cartoon.rs"
